# StackDrop

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  stackdrop-architecture.md  stackdrop-guardrails.md  stackdrop-plan.md  stackdrop-prd.md  tsconfig.json  vitest.config.ts
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEMO_CHECKLIST.md  DEMO_VIDEO.md  ENV.md  GUARDRAILS.md  PLAN.md  PRD.md  PRODUCTION.md  PROOF.md  SECURITY.md  design.md  stackdrop-plan.md  stackdrop-prd.md
scripts/: setup-cloud-agent-env.sh  write_minimal_docx.py
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  path_utils.rs
src-tauri/src/commands/: file_commands.rs
src/app/layout/: App.tsx  AppShell.tsx  styles.css
src/app/providers/: AppDataProvider.tsx
src/app/routes/: AppRoutes.tsx
src/data/db/: createTestSqlClient.ts  migrate.ts  schema.sql  sqliteClient.ts  sqljsClient.ts
src/data/mappers/: itemMapper.ts
src/data/repositories/: collectionRepository.ts  documentRepository.ts  fileRepository.ts  folderRepository.ts  itemRepository.ts  linkRepository.ts  noteRepository.ts  tagRepository.ts
src/data/search/: documentSearchRepository.ts  searchRepository.ts
src/domain/documents/: types.ts
src/domain/ingestion/: normalizeLink.ts  normalizeNote.ts  parseFile.ts
src/domain/items/: reindexItemSearch.ts  removeItem.ts  (+2 more)
src/lib/: log.ts
src/tests/: vitest.setup.ts
src/types/: sql.js-fts5.d.ts
(+72 files in other folders)
