[package]
name = "stackdrop"
version = "0.1.0"
description = "Local-first desktop folder document indexer"
authors = ["StackDrop"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
