[package]
name = "stackdrop"
version = "2.0.4"
description = "Local-first desktop folder document indexer"
authors = ["StackDrop"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
